Crash when creating new material slots #55628

Closed
opened 2018-06-26 11:44:57 +02:00 by Dalai Felinto · 13 comments

Blender Version
Broken: 40e1e8ebed
Worked: 40e1e8ebed^

Short description of error
ASAN crash when creating new material slots.

Exact steps for others to reproduce the error
Add a new material slot, it crashes.

SUMMARY: AddressSanitizer: heap-buffer-overflow //source/blender/draw/engines/workbench/workbench_deferred.c:720 in workbench_deferred_solid_cache_populate
Full backtrace: P739

**Blender Version** Broken: 40e1e8ebed Worked: 40e1e8ebed^ **Short description of error** ASAN crash when creating new material slots. **Exact steps for others to reproduce the error** Add a new material slot, it crashes. `SUMMARY: AddressSanitizer: heap-buffer-overflow //source/blender/draw/engines/workbench/workbench_deferred.c:720 in workbench_deferred_solid_cache_populate` Full backtrace: [P739](https://archive.blender.org/developer/P739.txt)
Jeroen Bakker was assigned by Dalai Felinto 2018-06-26 11:44:57 +02:00
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Author
Owner

Added subscriber: @Sergey

Added subscriber: @Sergey
Author
Owner

Note: If I change the visualization to Look Dev, it still crashes, although elsewhere:

SUMMARY: AddressSanitizer: heap-buffer-overflow //source/blender/draw/engines/eevee/eevee_materials.c:1487 in EEVEE_materials_cache_populate
Full backtrace: P740

Which makes me think that the problem is elsewhere, probably depsgraph related.

Note: If I change the visualization to Look Dev, it still crashes, although elsewhere: `SUMMARY: AddressSanitizer: heap-buffer-overflow //source/blender/draw/engines/eevee/eevee_materials.c:1487 in EEVEE_materials_cache_populate` Full backtrace: [P740](https://archive.blender.org/developer/P740.txt) Which makes me think that the problem is elsewhere, probably depsgraph related.
Jeroen Bakker was unassigned by Dalai Felinto 2018-06-26 11:50:52 +02:00
Dalai Felinto self-assigned this 2018-06-26 11:50:52 +02:00
Author
Owner

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Author
Owner

Assigning to self, I will bisect it to see what is causing this.

Assigning to self, I will bisect it to see what is causing this.
Dalai Felinto removed their assignment 2018-06-26 12:08:55 +02:00
Brecht Van Lommel was assigned by Dalai Felinto 2018-06-26 12:08:55 +02:00
Author
Owner

Issue introduced on: 40e1e8ebed

Issue introduced on: 40e1e8ebed4
Author
Owner

FYI when adding a new material slot, inside BKE_material_resize_object() we call:

DEG_id_tag_update(&ob->id, DEG_TAG_COPY_ON_WRITE);
DEG_relations_tag_update(bmain);

A possible fix is to tag DEG_TAG_GEOMETRY as well (P741). It kind of make sense since material is sometimes stored in the mesh. But not sure what is the real cause of the problem.

FYI when adding a new material slot, inside `BKE_material_resize_object()` we call: > DEG_id_tag_update(&ob->id, DEG_TAG_COPY_ON_WRITE); > DEG_relations_tag_update(bmain); A possible fix is to tag DEG_TAG_GEOMETRY as well ([P741](https://archive.blender.org/developer/P741.txt)). It kind of make sense since material is sometimes stored in the mesh. But not sure what is the real cause of the problem.
Author
Owner

Removed subscriber: @Jeroen-Bakker

Removed subscriber: @Jeroen-Bakker

This issue was referenced by c07f2bc891

This issue was referenced by c07f2bc89196ea449a2875634eb85efa45733fb5
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @jarbona

Added subscriber: @jarbona

I downloaded the linux version :
blender-2.80-3d16a268ee68-linux-glibc224-x86_64 and blender crash either when I click on the material button or when I create a new material
Here is the crash file for when it happend on clicking the material button:

Blender 2.80 (sub 44), Commit date: 2019-02-07 23:15, Hash 3d16a268ee

bpy.ops.object.select_all(action='DESELECT') # Operator

backtrace

./blender(BLI_system_backtrace+0x1d) [0x1babe4d]
./blender() [0x1158829]
/lib/x86_64-linux-gnu/libc.so.6(+0x3ef20) [0x7f848f5b5f20]
./blender(blo_do_versions_280+0x18f3) [0x17e5393]
./blender() [0x17c10a1]
./blender(blo_read_file_internal+0xa1b) [0x17d3c1b]
./blender(BLO_read_from_memory+0x37) [0x17be907]
./blender() [0x144cd25]
./blender(ED_preview_ensure_dbase+0x45) [0x144e825]
./blender(ED_preview_icon_job+0x28) [0x144e988]
./blender(UI_id_icon_render+0x7a) [0x131d8ca]
./blender(ui_id_icon_get+0x17a) [0x131da9a]
./blender(UI_rnaptr_icon_get+0x3d) [0x131dcdd]
./blender(uiTemplateList+0x8a4) [0x1344034]
./blender(UILayout_template_list_call+0x47) [0x1b10e47]
./blender(RNA_function_call+0x12) [0x1a3be42]
./blender() [0x150b4fa]
./blender(_PyObject_FastCallKeywords+0x104) [0x2f8b054]
./blender(_PyEval_EvalFrameDefault+0x465c) [0x11502cc]
./blender() [0x114abc0]
./blender(_PyFunction_FastCallDict+0x2a6) [0x2f8a8f6]
./blender() [0x150bbde]
./blender() [0x1b1116f]
./blender() [0x1455513]
./blender(ED_region_panels_layout_ex+0x2b4) [0x14579f4]
./blender() [0x1192514]
./blender(wm_draw_update+0x355) [0x115af95]
./blender(WM_main+0x30) [0x1159240]
./blender(main+0x30a) [0x10bee1a]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xe7) [0x7f848f598b97]
./blender(_start+0x2a) [0x115523a]

and here is the one when clickng new material:

Blender 2.80 (sub 44), Commit date: 2019-02-07 23:15, Hash 3d16a268ee

bpy.context.space_data.context = 'MATERIAL' # Property
bpy.ops.material.new() # Operator

backtrace

./blender(BLI_system_backtrace+0x1d) [0x1babe4d]
./blender() [0x1158829]
/lib/x86_64-linux-gnu/libc.so.6(+0x3ef20) [0x7f6422b3af20]
./blender(blo_do_versions_280+0x18f3) [0x17e5393]
./blender() [0x17c10a1]
./blender(blo_read_file_internal+0xa1b) [0x17d3c1b]
./blender(BLO_read_from_memory+0x37) [0x17be907]
./blender() [0x144cd25]
./blender(ED_preview_ensure_dbase+0x45) [0x144e825]
./blender(ED_preview_icon_job+0x28) [0x144e988]
./blender(UI_id_icon_render+0x7a) [0x131d8ca]
./blender(ui_id_icon_get+0x17a) [0x131da9a]
./blender(UI_rnaptr_icon_get+0x3d) [0x131dcdd]
./blender(uiTemplateList+0x8a4) [0x1344034]
./blender(UILayout_template_list_call+0x47) [0x1b10e47]
./blender(RNA_function_call+0x12) [0x1a3be42]
./blender() [0x150b4fa]
./blender(_PyObject_FastCallKeywords+0x104) [0x2f8b054]
./blender(_PyEval_EvalFrameDefault+0x465c) [0x11502cc]
./blender() [0x114abc0]
./blender(_PyFunction_FastCallDict+0x2a6) [0x2f8a8f6]
./blender() [0x150bbde]
./blender() [0x1b1116f]
./blender() [0x1455513]
./blender(ED_region_panels_layout_ex+0x2b4) [0x14579f4]
./blender() [0x1192514]
./blender(wm_draw_update+0x355) [0x115af95]
./blender(WM_main+0x30) [0x1159240]
./blender(main+0x30a) [0x10bee1a]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xe7) [0x7f6422b1db97]
./blender(_start+0x2a) [0x115523a]

Thank you,

I downloaded the linux version : blender-2.80-3d16a268ee68-linux-glibc224-x86_64 and blender crash either when I click on the material button or when I create a new material Here is the crash file for when it happend on clicking the material button: # Blender 2.80 (sub 44), Commit date: 2019-02-07 23:15, Hash 3d16a268ee68 bpy.ops.object.select_all(action='DESELECT') # Operator # backtrace ./blender(BLI_system_backtrace+0x1d) [0x1babe4d] ./blender() [0x1158829] /lib/x86_64-linux-gnu/libc.so.6(+0x3ef20) [0x7f848f5b5f20] ./blender(blo_do_versions_280+0x18f3) [0x17e5393] ./blender() [0x17c10a1] ./blender(blo_read_file_internal+0xa1b) [0x17d3c1b] ./blender(BLO_read_from_memory+0x37) [0x17be907] ./blender() [0x144cd25] ./blender(ED_preview_ensure_dbase+0x45) [0x144e825] ./blender(ED_preview_icon_job+0x28) [0x144e988] ./blender(UI_id_icon_render+0x7a) [0x131d8ca] ./blender(ui_id_icon_get+0x17a) [0x131da9a] ./blender(UI_rnaptr_icon_get+0x3d) [0x131dcdd] ./blender(uiTemplateList+0x8a4) [0x1344034] ./blender(UILayout_template_list_call+0x47) [0x1b10e47] ./blender(RNA_function_call+0x12) [0x1a3be42] ./blender() [0x150b4fa] ./blender(_PyObject_FastCallKeywords+0x104) [0x2f8b054] ./blender(_PyEval_EvalFrameDefault+0x465c) [0x11502cc] ./blender() [0x114abc0] ./blender(_PyFunction_FastCallDict+0x2a6) [0x2f8a8f6] ./blender() [0x150bbde] ./blender() [0x1b1116f] ./blender() [0x1455513] ./blender(ED_region_panels_layout_ex+0x2b4) [0x14579f4] ./blender() [0x1192514] ./blender(wm_draw_update+0x355) [0x115af95] ./blender(WM_main+0x30) [0x1159240] ./blender(main+0x30a) [0x10bee1a] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xe7) [0x7f848f598b97] ./blender(_start+0x2a) [0x115523a] and here is the one when clickng new material: # Blender 2.80 (sub 44), Commit date: 2019-02-07 23:15, Hash 3d16a268ee68 bpy.context.space_data.context = 'MATERIAL' # Property bpy.ops.material.new() # Operator # backtrace ./blender(BLI_system_backtrace+0x1d) [0x1babe4d] ./blender() [0x1158829] /lib/x86_64-linux-gnu/libc.so.6(+0x3ef20) [0x7f6422b3af20] ./blender(blo_do_versions_280+0x18f3) [0x17e5393] ./blender() [0x17c10a1] ./blender(blo_read_file_internal+0xa1b) [0x17d3c1b] ./blender(BLO_read_from_memory+0x37) [0x17be907] ./blender() [0x144cd25] ./blender(ED_preview_ensure_dbase+0x45) [0x144e825] ./blender(ED_preview_icon_job+0x28) [0x144e988] ./blender(UI_id_icon_render+0x7a) [0x131d8ca] ./blender(ui_id_icon_get+0x17a) [0x131da9a] ./blender(UI_rnaptr_icon_get+0x3d) [0x131dcdd] ./blender(uiTemplateList+0x8a4) [0x1344034] ./blender(UILayout_template_list_call+0x47) [0x1b10e47] ./blender(RNA_function_call+0x12) [0x1a3be42] ./blender() [0x150b4fa] ./blender(_PyObject_FastCallKeywords+0x104) [0x2f8b054] ./blender(_PyEval_EvalFrameDefault+0x465c) [0x11502cc] ./blender() [0x114abc0] ./blender(_PyFunction_FastCallDict+0x2a6) [0x2f8a8f6] ./blender() [0x150bbde] ./blender() [0x1b1116f] ./blender() [0x1455513] ./blender(ED_region_panels_layout_ex+0x2b4) [0x14579f4] ./blender() [0x1192514] ./blender(wm_draw_update+0x355) [0x115af95] ./blender(WM_main+0x30) [0x1159240] ./blender(main+0x30a) [0x10bee1a] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xe7) [0x7f6422b1db97] ./blender(_start+0x2a) [0x115523a] Thank you,

@jarbona, please make a new report following a bug report guidelines and providing all information requested from there.

@jarbona, please make a new report following a bug report guidelines and providing all information requested from there.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55628
No description provided.