Fix T55628: Crash when creating new material slots

We need to update the geometry when resizing the object material slots.